--- a/appcompat/src/androidTest/res/values/strings.xml
+++ b/appcompat/src/androidTest/res/values/strings.xml
@@ -100,4 +100,6 @@
     <string name="font_serif">serif</string>
 
     <string name="toolbar_collapse">Toolbar collapse</string>
+
+    <string name="clicked">Clicked</string>
 </resources>
