--- a/samples/ViewPager2Demos/src/main/res/values/strings.xml
+++ b/samples/ViewPager2Demos/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="label_jump_to">Jump to:</string>
     <string name="button_jump">Jump</string>
     <string name="checkbox_smoothscroll">Smooth</string>
+    <string name="checkbox_rotate">Rotate</string>
+    <string name="checkbox_translate">Translate</string>
+    <string name="checkbox_scale">Scale</string>
 </resources>
