Support subtitle in car tool bar
Bug: 119514137
Test: use Mojava and CarToolBarTest
Change-Id: Idc89640fe398d4c578f65f68b5a4e0c522ed67b8

--- a/samples/SupportCarDemos/src/main/res/values/strings.xml
+++ b/samples/SupportCarDemos/src/main/res/values/strings.xml
@@ -118,6 +118,8 @@
     <!-- Strings for CarToolbarActivity Demo. -->
     <string name="car_toolbar_title">CarToolbar demo title</string>
     <string name="toolbar_title">Toolbar demo title</string>
+    <string name="car_toolbar_subtitle">CarToolbar demo subtitle</string>
+    <string name="toolbar_subtitle">Toolbar demo subtitle</string>
 
     <!-- Spinner sample entries -->
     <string-array name="spinner_entries">
