--- a/samples/SupportCarDemos/src/main/res/values/strings.xml
+++ b/samples/SupportCarDemos/src/main/res/values/strings.xml
@@ -80,6 +80,9 @@
     </string>
 
     <!-- String for the drawer demo -->
+    <string name="car_drawer_open" translatable="false">Open drawer</string>
+    <string name="car_drawer_close" translatable="false">Close drawer</string>
+
     <string name="drawer_demo_activity_title">Drawer Demo</string>
     <string name="drawer_demo_activity_drawer_title">Drawer</string>
     <string name="drawer_demo_activity_drawer_sub_title">Sub Drawer</string>
